# C-Data-Structures-Library

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  asan.log.140350  suggestions.md
examples/: parse.h
include/: BST.h  Queue.h  Stack.h  String.h  arena.h  bit_vector.h  common.h  default_functions.h  error.h  fast_math.h  gen_array.h  gen_vector.h  hashmap.h  hashset.h  helper_functions.h  map_setup.h  matrix.h  matrix_generic.h  matrix_types.def  parse.h  random.h  str_setup.h  trie.h
single_header/: arena_single.h  bitVec.h  bitVec_single.h  genVec_single.h  hashmap_single.h  matrix_single.h  string_single.h
src/: BST.c  Queue.c  Stack.c  String.c  arena.c  bit_vector.c  common.c  fast_math.c  gen_array.c  gen_vector.c  hashmap.c  hashset.c  main.c  matrix.c  parser.c  random.c
src/tests/: genVec_test.h  hashmap_test.h  hashmap_test_ai.h  hashset_test.h  helpers.h  string_test.h  string_test_ai.h  test_String.h  test_genVec.h  test_hashmap.h
tests/: arena_test.h  genVec_test.h  genVec_test_ai.h  hashmap_test.h  hashmap_test_ai.h  hashset_test.h  helpers.h  matrix_test.h  queue_test.h  random_test.h  stack_test.h  string_test.h
